fix: align background image to left

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Spectral', serif;
   text-align: center;
  
-  background: url(https://i.ibb.co/JnHQYcf/Healthy-Eating-1200x-jpg.webp) no-repeat center/cover;
+  background: url(https://i.ibb.co/JnHQYcf/Healthy-Eating-1200x-jpg.webp) no-repeat left/cover;
   height: 100vh;
 
   color: #EBF1FB;
